# logi-js

./: .editorconfig  .gitattributes  .gitignore  .npmignore  .prettierignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json  vite.config.ts
lib/: gkey.ts  index.ts  lcd.ts  led.ts
lib/types/: env.d.ts  index.d.ts  unit.d.ts
src/: Core.hh  libgkey.cc  liblcd.cc  libled.cc
